--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,11 +3,16 @@
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
+$color-secondary-light: #973221;
 
-$color-white: #fff;
+$color-grey-light: #f7f7f7;
 $color-grey-dark: #777;
+$color-white: #fff;
 $color-black: #000;
 
+
+//  FONT
+$default-font-size: 1.6rem;
 
 // GRID
 $grid-width: 114rem;
