--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,10 +1,44 @@
-.row {
-    max-width: $grid-width; // it means if smaller the 114 rem it will fill the available space
-    background-color: #d24141;
-    margin: 0 auto;
-    margin-bottom: $gutter-vertical;
-}
+// _grid.scss
 
-.col {
-    background: rebeccapurple;
+.row {
+    max-width: $grid-width; // it means if smaller than 114 rem it will fill the available space
+    margin: 0 auto;
+
+    &:not(:last-child) {
+        // &:not(:last-child) means select everything and NOT the last child
+        margin-bottom: $gutter-vertical;
+    }
+
+    @include clearfix;
+
+    [class^="col-"] {
+        float: left;
+
+        &:not(:last-child) {
+            margin-right: $gutter-horizontal;
+        }
+    }
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
+    }
+
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+    }
+
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+    }
+
+    .col-1-of-4 {
+        width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+    }
+
+    .col-2-of-4 {
+        width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+    }
+    .col-3-of-4 {
+        width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+    }
 }
