--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,10 +3,20 @@
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
-$color-secondary-light: #973221;
 
-$color-grey-light: #f7f7f7;
-$color-grey-dark: #777;
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-secondary-dark-1: #cc45ff;
+$color-secondary-dark-2: #56116e;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #9c9b9b;
+
+$color-grey-dark: #413f3f;
 $color-white: #fff;
 $color-black: #000;
 
