--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,8 @@
+
+@use "../abstracts/variables" as *;
+
 .section-about {
-    background-color: $color-grey-light;
+    background-color: $color-grey-light-1;
     padding: 25rem 0; // cause make a space from polygon and section-about
     margin-top: -20vh; // bringing the section-about closer to header polygon
     
@@ -14,6 +17,17 @@
 
 
     & > * { // selector is .section-features > *
-        transform: skewY(12deg);
+        transform: skewY(7deg);
     }
+}
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 45rem 0 50rem 0;
+    margin-top: $gutter-vertical;
+}
+
+.section-stories {
+    padding: 15rem 0;
+    background-color: $color-grey-light-1;
 }
