--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,12 @@
 @use "base/utilities";
 
 // Import components
+@use "components/bg-video";
 @use "components/button";
 @use "components/card";
 @use "components/composition";
 @use "components/feature-box";
+@use "components/form";
 @use "components/story";
 
 
