--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,6 +18,7 @@ $color-grey-light-2: #bebebe;
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
