--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,4 +1,5 @@
 @use "../abstracts/variables" as *;
+@use "../abstracts/functions" as *;
 
 .story {
     width: 75%;
@@ -10,6 +11,16 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
+
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: skewX(0);
+    }
 
     /* THE .story__shape element IS A CONTAINER FOR THE .story__image (the image) */ 
     &__shape {
@@ -24,6 +35,10 @@
         //in this case CAUSE of Float property use the transform:translate();
         transform: translateX(-3rem) skewX(12deg);
         position: relative; // __caption needs the container position relative
+
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &__img {
@@ -35,6 +50,10 @@
 
     &__text {
         transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &__caption {
