--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,6 @@
+
+
+@use '../abstracts/functions' as *;
 @use "../abstracts/variables" as *;
 
 .header {
@@ -10,7 +13,17 @@
     position: relative;
     /* THE values of  polygon(x y, x y, x y, x y) */
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%);;
+    clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%);
+    
+    @include respond(tab-port) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
+
+    @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
 
     &__logo-box {
         position: absolute;
