--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* abstract/_functions.scss */
+/* =================================================================
+    ORDER APPLYING THE MEDIA QUERIES ON ELEMENTS: Base + Typography > general layout + grid > page layout + components
+
 /* Breakpoint Mixin */
 /*  COLORS: */
 /* THIS FILE SUPPOSE TO HOLD THE BASICS OF PAGE
@@ -34,8 +37,13 @@ html {
 }
 
 body {
-  box-sizing: border-box;
-  /* good practice to do like this with the body{border-box: box-sizing;} and in * {border-box:inherit;} */
+  box-sizing: border-box; /* good practice to do like this with the body{border-box: box-sizing;} and in * {border-box:inherit;} */
+  padding: 3rem;
+}
+@media (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
 }
 
 /* holds all animations code */
@@ -82,7 +90,6 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -98,12 +105,23 @@ body {
   letter-spacing: 3.5rem;
   animation: moveInRight 0.9s ease-out;
 }
+@media (max-width: 37.5em) {
+  .heading-primary--main {
+    letter-spacing: 1rem;
+    font-size: 5rem;
+  }
+}
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 400;
   letter-spacing: 1.5rem;
   animation: moveInLeft 1.3s ease-out;
+}
+@media (max-width: 37.5em) {
+  .heading-primary--sub {
+    letter-spacing: 0.5rem;
+  }
 }
 
 .heading-secondary {
@@ -117,6 +135,16 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s;
+}
+@media (max-width: 56.25em) {
+  .heading-secondary {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .heading-secondary {
+    font-size: 2.5rem;
+  }
 }
 .heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -147,13 +175,27 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
 }
+@media (max-width: 56.25em) {
+  .u-margin-bottom-medium {
+    margin-bottom: 3rem !important;
+  }
+}
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
 }
+@media (max-width: 56.25em) {
+  .u-margin-bottom-big {
+    margin-bottom: 5rem !important;
+  }
+}
 
 .u-margin-top-big {
   margin-top: 8rem !important;
+}
+
+.u-margin-top-huge {
+  margin-top: 10rem !important;
 }
 
 .bg-video {
@@ -275,17 +317,55 @@ body {
   transition: all 0.3s;
   outline-offset: 2rem;
 }
+@media (max-width: 75em) {
+  .composition__photo {
+    margin-top: 8rem;
+    width: 50%;
+  }
+}
+@media (max-width: 56.25em) {
+  .composition__photo {
+    float: left;
+    position: relative;
+    width: 33.3333333%;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+  }
+}
 .composition__photo--p1 {
   left: 0;
   top: -2rem;
 }
+@media (max-width: 56.25em) {
+  .composition__photo--p1 {
+    width: 57%;
+    top: 0;
+    left: 2rem;
+    transform: scale(1.2);
+  }
+}
 .composition__photo--p2 {
   right: 0;
-  top: 2rem;
+}
+@media (max-width: 56.25em) {
+  .composition__photo--p2 {
+    width: 57%;
+    top: -2rem;
+    left: 2rem;
+    transform: scale(1.3);
+    z-index: 1000;
+  }
 }
 .composition__photo--p3 {
   left: 20%;
   top: 10rem;
+}
+@media (max-width: 56.25em) {
+  .composition__photo--p3 {
+    width: 57%;
+    top: -2rem;
+    left: 2rem;
+    transform: scale(1.1);
+  }
 }
 .composition__photo:hover {
   outline: 1.5rem solid #7ed56f;
@@ -304,8 +384,8 @@ body {
   height: 50rem;
 }
 .card__side {
-  height: 50rem;
-  transition: all 0.3s ease;
+  height: 52rem;
+  transition: all 0.8s ease;
   position: absolute;
   top: 0;
   left: 0;
@@ -342,6 +422,8 @@ body {
   background-blend-mode: screen;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 .card__picture--1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../img/nat-5.jpg");
@@ -361,7 +443,7 @@ body {
   position: absolute;
   top: 12rem;
   right: 2rem;
-  width: 65%;
+  width: 75%;
 }
 .card__heading-span {
   padding: 1rem 1.5rem;
@@ -414,6 +496,43 @@ body {
   font-size: 6rem;
   font-weight: 100;
 }
+@media (max-width: 56.25em) {
+  .card {
+    height: auto;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  }
+  .card__side {
+    height: auto;
+    position: relative;
+    box-shadow: none;
+  }
+  .card__side--back {
+    transform: rotateY(0);
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  }
+  .card:hover .card__side--front {
+    transform: rotateY(0);
+  }
+  .card__details {
+    padding: 1rem 3rem;
+  }
+  .card__cta {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0);
+    width: 100%;
+    padding: 7rem 4rem 4rem 4rem;
+  }
+  .card__price-box {
+    margin-bottom: 3rem;
+  }
+  .card__price-value {
+    font-size: 4rem;
+  }
+}
 
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
@@ -423,6 +542,11 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4 rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
+}
+@media (max-width: 56.25em) {
+  .feature-box {
+    padding: 2rem;
+  }
 }
 .feature-box__icon {
   font-size: 6rem;
@@ -434,6 +558,11 @@ body {
   color: transparent;
   /* display:inline-block provides out off normal flow, bg-image:is image, 
   webkit-background-clip::text clipping the image to text, THEN you must also make the text color:transparent */
+}
+@media (max-width: 56.25em) {
+  .feature-box__icon {
+    margin: 0;
+  }
 }
 .feature-box:hover {
   transform: translateY(-1.5rem) scale(1.03);
@@ -451,6 +580,18 @@ body {
   transform: skewX(-12deg);
   /* THE .story__shape element IS A CONTAINER FOR THE .story__image (the image) */
 }
+@media (max-width: 56.25em) {
+  .story {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .story {
+    transform: skewX(0);
+  }
+}
 .story__shape {
   width: 15rem;
   height: 15rem;
@@ -462,6 +603,11 @@ body {
   transform: translateX(-3rem) skewX(12deg);
   position: relative;
 }
+@media (max-width: 37.5em) {
+  .story__shape {
+    transform: translateX(-3rem) skewX(0);
+  }
+}
 .story__img {
   height: 100%;
   transform: translateX(-4rem) scale(1.4);
@@ -470,6 +616,11 @@ body {
 }
 .story__text {
   transform: skewX(12deg);
+}
+@media (max-width: 37.5em) {
+  .story__text {
+    transform: translateX(-3rem) skewX(0);
+  }
 }
 .story__caption {
   position: absolute;
@@ -509,6 +660,11 @@ body {
   display: block;
   transition: all 0.3s;
 }
+@media (max-width: 56.25em) {
+  .form__input {
+    width: 100%;
+  }
+}
 .form__input:focus {
   outline: none;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -536,6 +692,12 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block;
+}
+@media (max-width: 56.25em) {
+  .form__radio-group {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
 .form__radio-input {
   display: none;
@@ -662,7 +824,13 @@ body {
 }
 @media (max-width: 56.25em) {
   .row:not(:last-child) {
-    margin-right: 6rem;
+    margin-bottom: 6rem;
+  }
+}
+@media (max-width: 56.25em) {
+  .row {
+    max-width: 50rem;
+    padding: 0 3rem;
   }
 }
 .row::after {
@@ -677,11 +845,12 @@ body {
   margin-right: 6rem;
 }
 @media (max-width: 56.25em) {
-  .row [class^=col-] {
+  .row [class^=col-]:not(:last-child) {
     margin-right: 0;
+    margin-bottom: 6rem;
   }
 }
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .row [class^=col-] {
     width: 100% !important;
   }
@@ -721,6 +890,18 @@ body {
   text-align: center;
   cursor: pointer;
 }
+@media (max-width: 56.25em) {
+  .navigation__button {
+    top: 4rem;
+    right: 4rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .navigation__button {
+    top: 3rem;
+    right: 3rem;
+  }
+}
 .navigation__background {
   height: 6rem;
   width: 6rem;
@@ -731,6 +912,18 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+}
+@media (max-width: 56.25em) {
+  .navigation__background {
+    top: 4.5rem;
+    right: 4.5rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .navigation__background {
+    top: 3.5rem;
+    right: 3.5rem;
+  }
 }
 .navigation__nav {
   height: 100vh;
@@ -833,6 +1026,18 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 78%, 0 100%);
 }
+@media (max-width: 56.25em) {
+  .header {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+}
+@media (max-width: 37.5em) {
+  .header {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+}
 .header__logo-box {
   position: absolute;
   top: 4rem;
@@ -857,9 +1062,19 @@ body {
   font-size: 1.4rem;
   color: #f7f7f7;
 }
+@media (max-width: 56.25em) {
+  .footer {
+    padding: 8rem 0;
+  }
+}
 .footer__logo-box {
   text-align: center;
-  margin-bottom: 8rem;
+  margin-bottom: 6rem;
+}
+@media (max-width: 56.25em) {
+  .footer__logo-box {
+    margin-bottom: 6rem;
+  }
 }
 .footer__logo {
   width: 15rem;
@@ -869,6 +1084,12 @@ body {
   border-top: 1px solid #777;
   padding-top: 2rem;
   display: inline-block;
+}
+@media (max-width: 56.25em) {
+  .footer__navigation {
+    width: 100%;
+    text-align: center;
+  }
 }
 .footer__list {
   list-style: none;
@@ -898,11 +1119,22 @@ body {
   width: 80%;
   float: right;
 }
+@media (max-width: 56.25em) {
+  .footer__copyright {
+    width: 100%;
+    float: none;
+  }
+}
 
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh;
+}
+@media (max-width: 56.25em) {
+  .section-about {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -912,14 +1144,34 @@ body {
   transform: skewY(-7deg);
   margin-top: -10rem;
 }
+@media (max-width: 75em) {
+  .section-features {
+    margin-top: 35rem;
+  }
+}
+@media (max-width: 56.25em) {
+  .section-features {
+    margin-top: -5rem;
+  }
+}
 .section-features > * {
   transform: skewY(7deg);
+}
+@media (max-width: 56.25em) {
+  .section-features {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 45rem 0 50rem 0;
-  margin-top: -14rem;
+  padding: 25rem 0 15rem 0;
+  margin-top: -14rem; /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Mozna zmenit na -10rem !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+}
+@media (max-width: 56.25em) {
+  .section-tours {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
@@ -927,10 +1179,20 @@ body {
   padding: 15rem 0;
   background-color: transparent;
 }
+@media (max-width: 56.25em) {
+  .section-stories {
+    padding: 10rem 0;
+  }
+}
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+@media (max-width: 56.25em) {
+  .section-book {
+    padding: 10rem 0;
+  }
 }
 
 .book {
@@ -939,9 +1201,30 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
 }
+@media (max-width: 75em) {
+  .book {
+    background-image: linear-gradient(105deg, rgba(247, 247, 247, 0.9) 0%, rgba(255, 255, 255, 0.9) 63%, transparent 63%), url("../../img/nat-10.jpg");
+    background-size: cover;
+  }
+}
+@media (max-width: 56.25em) {
+  .book {
+    background-image: linear-gradient(to right, rgba(247, 247, 247, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url("../../img/nat-10.jpg");
+  }
+}
 .book__form {
   width: 50%;
-  padding: 6.7rem;
+  padding: 6rem;
+}
+@media (max-width: 75em) {
+  .book__form {
+    width: 63%;
+  }
+}
+@media (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
