--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,7 +2,9 @@
 /* THIS FILE SUPPOSE TO HOLD THE BASICS OF PAGE
     A basic definitions about the project    */
 
+@use '../abstracts/variables' as *;
 @use '../abstracts/functions' as *;
+
 
 /* BASIC RESET */
 *,
@@ -22,7 +24,7 @@ html {
         font-size: 56.25%; // 0.5625*16px = 9px   1rem = 9px, 9/16 = 0.5625 * 100% = 56.25%
     }
 
-    @include respond(tablet) {  // width < 900?
+    @include respond(tab-port) {  // width < 900?
         font-size: 50%;  // 1 rem = 8px, 8/16 = 0.5 * 100% = 50%
     }
 
@@ -32,7 +34,11 @@ html {
 }
 
 body {
-    box-sizing: border-box;
-    /* good practice to do like this with the body{border-box: box-sizing;} and in * {border-box:inherit;} */
+    box-sizing: border-box;  /* good practice to do like this with the body{border-box: box-sizing;} and in * {border-box:inherit;} */
+    padding: 3rem;
+
+    @include respond(tab-port) { 
+        padding: 0;
+    }
 }
 
