--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/functions' as *;
 
 .card {
 
@@ -9,8 +10,8 @@
     height: 50rem;
 
     &__side {
-        height: 50rem;
-        transition: all .3s ease;
+        height: 52rem;
+        transition: all .8s ease;
         position: absolute;
         top: 0;
         left: 0;
@@ -26,25 +27,25 @@
 
         &--back {
             transform: rotateY(180deg);
-            
+
             &-1 {
                 background-image: linear-gradient(
-                    to right bottom, 
-                    $color-secondary-light, 
+                    to right bottom,
+                    $color-secondary-light,
                     $color-secondary-dark);
             }
 
             &-2 {
                 background-image: linear-gradient(
-                    to right bottom, 
-                    $color-primary-light, 
+                    to right bottom,
+                    $color-primary-light,
                     $color-primary-dark);
             }
 
             &-3 {
                 background-image: linear-gradient(
-                    to right bottom, 
-                    $color-tertiary-light, 
+                    to right bottom,
+                    $color-tertiary-light,
                     $color-tertiary-dark);
             }
         }
@@ -65,13 +66,17 @@
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
 
         &--1 {
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url("../img/nat-5.jpg");
         }
+
         &--2 {
             background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url("../img/nat-6.jpg");
         }
+
         &--3 {
             background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url("../img/nat-7.jpg");
         }
@@ -86,35 +91,32 @@
         position: absolute;
         top: 12rem;
         right: 2rem;
-        width: 65%;
+        width: 75%;
     }
-    
 
-    // A NEW WLEMENT IN BEM
+
+    // A NEW ELEMENT IN BEM
     &__heading-span {
         padding: 1rem 1.5rem;
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
 
         &--1 {
-            background-image: linear-gradient(
-                to right bottom, 
-                rgba($color-secondary-light, .85), 
-                rgba($color-secondary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-secondary-light, .85),
+                    rgba($color-secondary-dark, .85));
         }
 
         &--2 {
-            background-image: linear-gradient(
-                to right bottom, 
-                rgba($color-primary-light, .85), 
-                rgba($color-primary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-primary-light, .85),
+                    rgba($color-primary-dark, .85));
         }
 
         &--3 {
-            background-image: linear-gradient(
-                to right bottom, 
-                rgba($color-tertiary-light, .85), 
-                rgba($color-tertiary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-tertiary-light, .85),
+                    rgba($color-tertiary-dark, .85));
         }
     }
 
@@ -162,5 +164,53 @@
     &__price-value {
         font-size: 6rem;
         font-weight: 100;
+    }
+
+
+
+
+
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem;
+        }
+
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 4rem;
+        }
     }
 }
