--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/functions' as *;
 
 .feature-box {
     background-color: rgba($color-white, .8);
@@ -8,6 +9,10 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4 rem rgba($color-black, .15);
     transition: transform .3s;
+
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
 
     &__icon {
         font-size: 6rem;
@@ -19,6 +24,10 @@
         color: transparent;
         /* display:inline-block provides out off normal flow, bg-image:is image, 
         webkit-background-clip::text clipping the image to text, THEN you must also make the text color:transparent */
+
+        @include respond(tab-port) {
+            margin: 0;
+        }
     }
 
     &:hover {
