--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,5 @@
 @use "../abstracts/variables" as *;
+@use "../abstracts/functions" as *;
 
 .form {
 
@@ -18,6 +19,10 @@
         width: 90%;
         display: block;
         transition: all .3s;
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
 
 
         &:focus {
@@ -54,6 +59,11 @@
     &__radio-group  {
         width: 49%;
         display: inline-block;
+        
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
