--- a/sass/components/composition.scss
+++ b/sass/components/composition.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/functions' as *;
 
 .composition {
     position: relative;
@@ -11,21 +12,52 @@
         z-index: 10;
         transition: all .3s;
         outline-offset: 2rem; //GIVES THE SPACE BETWEEN THE BORDERS AND THE IMAGE ELEMENT
-        
+
+        @include respond(tab-land) {
+            margin-top: $gutter-vertical;
+            width: 50%;
+        }
+
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.3333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }        
         &--p1 {
             left: 0;
             top: -2rem;
+
+            @include respond(tab-port) {
+                width: 57%;
+                top: 0;
+                left: 2rem;
+                transform: scale(1.2);
+            }
         }
 
         &--p2 {
             right: 0;
-            top: 2rem;
+
+            @include respond(tab-port) {
+                width: 57%;
+                top: -2rem;
+                left: 2rem;
+                transform: scale(1.3);
+                z-index: 1000;
+            }
         }
 
         &--p3 {
             left: 20%; // THE % PRECENTAGE IS IMPORTANT CAUSE THE SCALABILITY OF IMAGES
             top: 10rem;
-            
+
+            @include respond(tab-port) {
+                width: 57%;
+                top: -2rem;
+                left: 2rem;
+                transform: scale(1.1);
+            }
         }
 
         &:hover {
