--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,10 +1,15 @@
 
 @use "../abstracts/variables" as *;
+@use "../abstracts/functions" as *;
 
 .section-about {
     background-color: $color-grey-light-1;
     padding: 25rem 0; // cause make a space from polygon and section-about
     margin-top: -20vh; // bringing the section-about closer to header polygon
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
     
 }
 
@@ -19,22 +24,42 @@
     transform: skewY(-7deg);
     margin-top: -10rem;
 
+    @include respond(tab-land) {
+        margin-top: 35rem;
+    }
+
+    @include respond(tab-port) {
+        margin-top: -5rem;
+    }
+
 
     & > * { // selector is .section-features > *
         transform: skewY(7deg);
+    }
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
     }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 45rem 0 50rem 0;
-    margin-top: -14rem;
+    padding: 25rem 0 15rem 0;
+    margin-top: -14rem; /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Mozna zmenit na -10rem !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+    @include respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
     background-color: transparent;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
@@ -43,6 +68,10 @@
         to right bottom, 
         $color-primary-light, 
         $color-primary-dark);
+
+        @include respond(tab-port) {
+            padding: 10rem 0;
+        }
     
 }
 
@@ -57,8 +86,34 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+    @include respond(tab-land) {
+        background-image: linear-gradient(
+        105deg, 
+        rgba($color-grey-light-1, .9) 0%,
+        rgba($color-white, .9) 63%,
+        transparent 63%), 
+        url("../../img/nat-10.jpg");
+        background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(
+        to right, 
+        rgba($color-grey-light-1, .9) 0%,
+        rgba($color-white, .9) 100%), 
+        url("../../img/nat-10.jpg");
+    }
+
     &__form {
         width: 50%;
-        padding: 6.7rem;
+        padding: 6rem;
+
+        @include respond(tab-land) {
+            width: 63%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
