Finishing the Udemy project(media querry). NodeJs dev and build process

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,8 +4,8 @@
 .card {
 
     //FUNCIONALITY
-    perspective: 150rem;
     -moz-perspective: 150rem;
+    perspective: 150rem;
     position: relative;
     height: 50rem;
 
@@ -16,6 +16,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: 3px;
         overflow: hidden;
@@ -168,8 +169,7 @@
 
 
 
-
-
+    /*  ============================== media query for cards  ========================================== */
 
     @include respond(tab-port) {
         height: auto;
