--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -23,39 +23,36 @@
             position: relative;
             width: 33.3333333%;
             box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
-        }        
+        }
+
         &--p1 {
             left: 0;
             top: -2rem;
 
-            @include respond(tab-port) {
-                width: 57%;
+            @include respond(tab-port)  {
                 top: 0;
-                left: 2rem;
                 transform: scale(1.2);
             }
         }
 
         &--p2 {
             right: 0;
+            top: 2rem;
 
-            @include respond(tab-port) {
-                width: 57%;
-                top: -2rem;
-                left: 2rem;
+            @include respond(tab-port)  {
+                top: -1rem;
                 transform: scale(1.3);
-                z-index: 1000;
+                z-index: 100;
             }
         }
 
         &--p3 {
-            left: 20%; // THE % PRECENTAGE IS IMPORTANT CAUSE THE SCALABILITY OF IMAGES
+            left: 20%;
             top: 10rem;
 
-            @include respond(tab-port) {
-                width: 57%;
-                top: -2rem;
-                left: 2rem;
+            @include respond(tab-port)  {
+                top: 1rem;
+                left: 0;
                 transform: scale(1.1);
             }
         }
